# nezabudu

./: alembic.ini  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 0018567b6487_create_task_table.py  1ff3897d97ce_create_task_table.py  3eb4ab95fd5b_create_task_table.py
bot/: comands.py  utils.py
bot/dialogs/: help_dialog.py  list_of_remiders_dialog.py  main_dialog.py  state_groups.py
bot/handlers/: cmd.py  main_handlers.py
db/: db_actions.py  db_helper.py
models/: task.py
parser/: after.py  core.py  errors.py  every.py  in_date.py  utils.py
perser/: after.py  core.py  utils.py
scheduler/: scheduler_actions.py
utils/: comands.py
