[tool.poetry]
name = "nezabudu"
version = "0.1.0"
description = ""
authors = ["daboggg <vzinin@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.3.0"
aiosqlite = "^0.19.0"
moment = "^0.12.1"
environs = "^10.1.0"
apscheduler = "^3.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
